--- a/style.css
+++ b/style.css
@@ -2,4 +2,9 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    font-family: poppins, sans-serif;
+}
+
+h1 {
+    font-size: 40px;
 }
